--- a/Theory.tex
+++ b/Theory.tex
@@ -161,8 +161,20 @@ Extensive searches resulting in the tightest exclusion limits in the pre-LHC era
  \item \textbf{\lep \cite{ALEPHSUSY, DELPHISUSY, L3SUSY, OPALSUSY, LEPLimits}}: At \lep various searches for supersymmetry have been performed targeting different species of supersymmetric particles. Scalar leptons and quarks are mainly pair-produced in the s-channel via $\gamma$ or $Z$ exchange. In case of selectrons also the t-channel exchange of neutralinos yields important contributions. The typical energy scale at \lep results in decays into the respective SM partner particles -- except for the scalar top -- and the lightest neutralino while also cascade decays are possible. Typical final states contain missing energy and a pair of acoplanar leptons or jets where the direction of one of the leptons/jets is not in the plane defined by the direction of the second lepton/jet and the beam direction. Similarly, neutrinos and charginos are expected to be pair-produced via $Z$ and $Z/\gamma$ s-channel exchange or t-channel selectron or sneutrino exchange, respectively. Typically, the lightest neutralino and fermion pairs are the final decay products of such events. Hence, the final state in case of chargino production is characterized by missing energy accompanied by four jets, two jets and one lepton or only leptons depending on the specific decay mode of the chargino while the most important signature for neutralino production are acoplanar pairs of jets or leptons coming along with large missing momentum. However, the exact decay topologies strongly depend on the particular mass spectrum of the supersymmetric particles so that the above mentioned topologies could also be accompanied by photons or manifest in multiple jets or leptons in cascade decays. Interpretations of combined results from all four experiments in the mSUGRA model lead to exclusion limits showing that $m_{1/2}$ has to be greater than $\approx 100 - 200$~\gev over a wide range of $m_{0}$ up to the~\tev-region for specific fixed other parameters. The lower limit on the LSP mass is found to be around 50~\gev nearly independent of other model constraints. 
  \item \textbf{\tevatron \cite{CDFLimits, D0Limits, Abazov200934}}: The \tevatron accelerator was the best place to search for supersymmetry before the actual start of the LHC, as the center of mass energy exceeded that of \hera and \lep by several orders of magnitude. Since sparticles are expected to be heavy, thus a rich program of supersymmetric searches was enabled covering various final states of different lepton, photon or jet multiplicities. Of special interest is the search for colored sparticles like squarks and gluinos, as \tevatron is a hadron collider. Squarks are expected to decay preferrably into a quark and the LSP, if they are heavier than the gluinos, resulting in an acoplanar-jet topology with missing transverse momentum. If gluinos are lighter than squarks, they will predominantly decay into a quark pair and the LSP producing a multijet final state accompanied by missing transverse momentum. Thus, searches for squarks and gluinos at \tevatron have been performed exploiting multijet and missing momentum final states. Results have been interpreted in the context of mSUGRA and extended the LEP results in the parameter region of $m_{0} = 70 - 300$ \gev and $m_{1/2} = 125 - 165$~\gev. Thus, gluinos below $\approx 280-300$~\gev for all squark masses and squarks below $380$~\gev independent of the gluino mass could be excluded. 
 \end{description}
-The absence of SUSY-like signals at any collider experiment performed previous to the start of the LHC and exclusion limits at the order of a few hundred \gev on sparticle masses activated an abundant amount of searches for supersymmetry at the LHC as it opened already with a center of mass energy of 7 \tev an even larger phase space than the \tevatron before. \\
-At the LHC a variety of searches targeting the various different production and decay modes of supersymmetric partices are performed. In general, they can be classified into searches for electroweakinos, third generation sfermions and searches for squarks and gluinos. Of particular interest are searches for colored particles as the LHC is as well as \tevatron a hadron collider. Some example diagrams for the production modes of such processes are shown in Fig. ... . At leading order sparticles are in R-parity conserving models predominantly produced in pairs like $\tilde{g}\tilde{g}$, $\tilde{g}\tilde{q}$ or $\tilde{q}\tilde{q}$ via e.g. gluon fusion or... 
+The absence of SUSY-like signals at any collider experiment performed previous to the start of the LHC and exclusion limits at the order of a few hundred \gev on sparticle masses activated an abundant amount of searches for supersymmetry at the LHC as it opened already with a center of mass energy of 7 \tev an even larger phase space than the \tevatron before. At the LHC a variety of searches targeting the various different production and decay modes of supersymmetric partices are performed. In general, they can be classified into searches for electroweakinos, third generation sfermions and searches for squarks and gluinos. Of particular interest are searches for colored particles as the LHC is as well as \tevatron a hadron collider. \\
+\begin{figure}[!tp]
+  \centering 
+  \begin{tabular}{cc}
+    \includegraphics[width=0.85\textwidth]{figures/Susy_Feynman.jpg} 
+  \end{tabular}
+  \caption{Example diagrams for the production of supersymmetric particles in hadron collisions at parton level.}
+  \label{fig:susy_feynman}
+\end{figure}
+At leading order sparticles in R-parity conserving models are predominantly produced in processes like~\cite{Kane:1982hw, Harrison:1982yi, Reya:1984yz, Dawson:1983fw, Baer:1985xz}
+\begin{equation}
+ pp \rightarrow \tilde{g}\tilde{g}, \tilde{g}\tilde{q}, \tilde{q}\tilde{q} \, .
+\end{equation}
+Some example diagrams for the production modes of such processes at parton level are shown in Fig.~\ref{fig:susy_feynman}. Typically, the squarks are assumed to be mass degenerate and refer to the partners of the light-flavour $(u, d, s, c, b)$ quarks. Supersymmetric partners of the top quark are considered separately due to a potentially large mixing affecting the mass splitting. Most recent SUSY cross section calculations consider higher order corrections caused e.g. by quark radiation or gluon loops typically up to next-to-leading order (NLO)~\cite{Kramer:2012bx}.\\
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -180,6 +192,14 @@ At the LHC a variety of searches targeting the various different production and 
   \caption{Interpretation of searches for supersymmetry at the CMS experiment with simplified models in $\tilde{g} \rightarrow qq\tilde{\chi}^0$ (\textit{left}) and $\tilde{q} \rightarrow q \tilde{\chi}^0$ (\textit{right}) topologies. Shown are the 95\% CL exclusion limits on the produced particle and LSP masses. The grey area represents the region where the respective decay mode is forbidden~\cite{Chatrchyan:2013sza}.}
   \label{fig:SMS_7TeV}
 \end{figure}
+\\
+- decay
+\\
+\\
+- backgrounds
+\\
+\\
+- 7 TeV searches
 
 
 
