--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1845,6 +1845,85 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       SLACcitation   = "%%CITATION = ARXIV:1301.2175;%%",
 }
 
+@article{Kane:1982hw,
+      author         = "Kane, Gordon L. and Leveille, J.P.",
+      title          = "{Experimental Constraints on Gluino Masses and
+                        Supersymmetric Theories}",
+      journal        = "Phys.Lett.",
+      volume         = "B112",
+      pages          = "227",
+      doi            = "10.1016/0370-2693(82)90968-6",
+      year           = "1982",
+      reportNumber   = "UM HE 81-68",
+      SLACcitation   = "%%CITATION = PHLTA,B112,227;%%",
+}
+
+@article{Harrison:1982yi,
+      author         = "Harrison, P.R. and Llewellyn Smith, C.H.",
+      title          = "{Hadroproduction of Supersymmetric Particles}",
+      journal        = "Nucl.Phys.",
+      volume         = "B213",
+      pages          = "223",
+      doi            = "10.1016/0550-3213(83)90510-2",
+      year           = "1983",
+      reportNumber   = "OXFORD TP 51/82",
+      SLACcitation   = "%%CITATION = NUPHA,B213,223;%%",
+}
+
+@article{Reya:1984yz,
+      author         = "Reya, E. and Roy, D.P.",
+      title          = "{SUPERSYMMETRIC PARTICLE PRODUCTION AT p anti-p COLLIDER
+                        ENERGIES}",
+      journal        = "Phys.Rev.",
+      volume         = "D32",
+      pages          = "645",
+      doi            = "10.1103/PhysRevD.32.645",
+      year           = "1985",
+      reportNumber   = "DO-TH-84-19",
+      SLACcitation   = "%%CITATION = PHRVA,D32,645;%%",
+}
+
+@article{Dawson:1983fw,
+      author         = "Dawson, Sally and Eichten, E. and Quigg, C.",
+      title          = "{Search for Supersymmetric Particles in Hadron - Hadron
+                        Collisions}",
+      journal        = "Phys.Rev.",
+      volume         = "D31",
+      pages          = "1581",
+      doi            = "10.1103/PhysRevD.31.1581",
+      year           = "1985",
+      reportNumber   = "FERMILAB-PUB-83-082-THY, FERMILAB-PUB-83-082-T,
+                        LBL-16540",
+      SLACcitation   = "%%CITATION = PHRVA,D31,1581;%%",
+}
+
+@article{Baer:1985xz,
+      author         = "Baer, Howard and Tata, Xerxes",
+      title          = "{Component Formulae for Hadroproduction of Left-handed
+                        and Right-handed Squarks}",
+      journal        = "Phys.Lett.",
+      volume         = "B160",
+      pages          = "159",
+      doi            = "10.1016/0370-2693(85)91484-4",
+      year           = "1985",
+      reportNumber   = "CERN-TH-4158-85",
+      SLACcitation   = "%%CITATION = PHLTA,B160,159;%%",
+}
+
+@article{Kramer:2012bx,
+      author         = "Kramer, Michael and Kulesza, Anna and van der Leeuw,
+                        Robin and Mangano, Michelangelo and Padhi, Sanjay and
+                        others",
+      title          = "{Supersymmetry production cross sections in $pp$
+                        collisions at $\sqrt{s}=7$ TeV}",
+      year           = "2012",
+      eprint         = "1206.2892",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2012-163",
+      SLACcitation   = "%%CITATION = ARXIV:1206.2892;%%",
+}
+
 % --- Indirect searches for new physics -------------------
 @Article{Chen:2001fja,
      author    = "Chen, S. and others",
