--- a/Objects.tex
+++ b/Objects.tex
@@ -1,6 +1,9 @@
+Particles produced in the pp collisions traverse through the detector and interact with the detector sub-components in a characteristic manner. Thus, it is possible to reconstruct the corresponding event and identify the types of particles which actually emerged from the collision. \\
+The approach for the event reconstruction and identification of specific particles used in CMS is discussed in this Chapter. First, the \textit{Particle-Flow (PF) algorithm} used for a global description of the collision event is introduced. Beyond that, in particular the reconstruction of jets is discussed in Section~\ref{sec:jets_reco}. Furthermore, the identification of decays from b-hadrons and boosted top quarks is discussed in Sections~\ref{sec:btagging} and~\ref{sec:boosted_tops}, respectively.
 \section{Global Event Description with the Particle-Flow Algorithm at CMS}
 \label{sec:pf_algo}
-
+The CMS experiment introduced the Particle-Flow algorithm for the reconstruction of collision events. This algorithm is designed to identify all stable particles in an event and can be applied to data events as well as to simulated events in an identical manner. Electrons and photons, charged and neutral hadrons as well as muons are thereby distinguishable and all sub-components of the detector are used by the PF algorithm to reconstruct the particles four-momenta. A detailed introduction to the PF algorithm can be found in~\cite{CMS-PAS-PFT-09-001}. \\ 
+The event reconstruction starts from ...
 \section{Reconstruction of Jets}
 \label{sec:jets_reco}
 
@@ -25,8 +28,8 @@
 \subsection{The HEP Top Tagger}
 \label{sec:boosted_tops_hep_top_tagger}
 
-\subsection{Subjet B-Tagging}
-\label{sec:boosted_tops_subjet_b}
+%\subsection{Subjet B-Tagging}
+%\label{sec:boosted_tops_subjet_b}
 
-\subsection{N-subjettiness}
-\label{sec:boosted_tops_n_subjettiness}
+%\subsection{N-subjettiness}
+%\label{sec:boosted_tops_n_subjettiness}
