--- a/Objects.tex
+++ b/Objects.tex
@@ -1,9 +1,13 @@
 Particles produced in the pp collisions traverse through the detector and interact with the detector sub-components in a characteristic manner. Thus, it is possible to reconstruct the corresponding event and identify the types of particles which actually emerged from the collision. \\
-The approach for the event reconstruction and identification of specific particles used in CMS is discussed in this Chapter. First, the \textit{Particle-Flow (PF) algorithm} used for a global description of the collision event is introduced. Beyond that, in particular the reconstruction of jets is discussed in Section~\ref{sec:jets_reco}. Furthermore, the identification of decays from b-hadrons and boosted top quarks is discussed in Sections~\ref{sec:btagging} and~\ref{sec:boosted_tops}, respectively.
+The approach for the event reconstruction and identification of specific particles used in CMS is discussed in this Chapter. First, the \textit{Particle-Flow (PF) algorithm} used for a global description of the collision event is introduced. Beyond that, in particular the reconstruction of jets is discussed in Section~\ref{sec:jets_reco}. Furthermore, the identification of decays from b-hadrons and boosted top quarks is reviewed in Sections~\ref{sec:btagging} and~\ref{sec:boosted_tops}, respectively.
 \section{Global Event Description with the Particle-Flow Algorithm at CMS}
 \label{sec:pf_algo}
-The CMS experiment introduced the Particle-Flow algorithm for the reconstruction of collision events. This algorithm is designed to identify all stable particles in an event and can be applied to data events as well as to simulated events in an identical manner. Electrons and photons, charged and neutral hadrons as well as muons are thereby distinguishable and all sub-components of the detector are used by the PF algorithm to reconstruct the particles four-momenta. A detailed introduction to the PF algorithm can be found in~\cite{CMS-PAS-PFT-09-001}. \\ 
-The event reconstruction starts from ...
+The CMS experiment introduced the Particle-Flow algorithm for the reconstruction of collision events. This algorithm is designed to identify all stable particles in an event and can be applied to data events as well as to simulated events in an identical manner. Electrons and photons, charged and neutral hadrons as well as muons are thereby distinguishable and all sub-components of the detector are used by the PF algorithm to reconstruct the particles four-momenta. The CMS detector is very well suited for this task. The silicon tracker enclosed by the uniform magnetic field enables a very efficient track reconstruction yielding only a small track fake rate down to small transverse momenta of $150$\,MeV/c. Furthermore, the strength of the magnetic field together with a high ECAL granularity allows photons to be separated from charged-particle energy deposits. A detailed introduction to the PF algorithm can be found in~\cite{CMS-PAS-PFT-09-001}. \\ 
+The event reconstruction starts with the identification of fundamental objects in the sub-detectors which are charged-particle tracks, calorimeter clusters and muon tracks. Tracks emerging from charged particles are formed following an iterative tracking algorithm~\cite{Adam:934067}. Starting from an initial seed trajectory, tracks are extrapolated to further tracker layers by taking into account multiple scattering and energy loss in the material following the equations of motion of a charged particle in a constant magnetic field. Each step proceeds with a removal of unambiguously allocated hits from the previous iteration. With this approach a high tracking efficiency as well as a low fake track rate can be achieved which is a crucial requirement for a successful particle-flow event reconstruction. Furthermore, calorimeter clusters are formed in each sub-detector separately based on adjacent calorimeter cells. Neighbouring cells are combined to form clusters when their energy exceeds a pre-defined threshold. \\
+A particle traversing through the detector gives typically rise to several of such elementary components so that a dedicated link algorithm is applied in order to connect these elements and form blocks while removing a potential double-counting of the same object in different detector parts. First, charged-tracks are associated to calorimeter clusters, if the extrapolated trajectory matches the cluster within the cluster boundaries. This is done considering effects like gaps and cracks between detector components, uncertainty on the shower position or multiple-scattering. Photons from Bremsstrahlung are considered by extrapolating also tangents of the tracks to the respective energy clusters. In a similar manner ECAL and HCAL clusters can be connected to each other as well by linking clusters in the more granular calorimeter to clusters in the less granular one. At last global muons can be defined by associating charged-tracks from the tracker with muon tracks reconstructed in the muon system. \\
+After the identification of such blocks of elements the PF algorithm proceeds to finally create a list of all particles contained in the event applying dedicated quality criteria interpreting the blocks in terms of particles. The identification of muons and a removal of their tracks from the blocks is followed by an assignment of electrons and associated Bremsstrahlung from tracks and linked ECAL clusters. After these have been removed from the blocks as well, remaining good quality tracks are considered to be charged hadrons. Their momenta are determined from combining the track momentum and the respective energy in the calorimeter cluster. If the cluster energy largely exceeds the measured momentum from the track beyond the detector resolution, it constitutes a photon and if the excess is larger than the total ECAL energy also a neutral hadron. Finally, remaining ECAL and HCAL clusters not linked to any track give rise to photons and neutral hadrons. \\
+The complete set of particles can then be used to derive further objects and quantities like e.g. jets as discussed in Section~\ref{sec:jets_reco}, missing transverse energy $E_{T}^{\mathrm{miss}}$ which is the magnitude of the vector momentum imbalance perpendicular to the beam direction, decay products of tau leptons or decays of b-hadrons as discussed in Section~\ref{sec:btagging}. 
+
 \section{Reconstruction of Jets}
 \label{sec:jets_reco}
 
