--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3548,6 +3548,17 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
      YEAR         = "2010"
 }
 
+@techreport{Adam:934067,
+      author        = "Adam, Wolfgang and Mangano, Boris and Speer, Thomas and
+                       Todorov, Teddy",
+      title         = "{Track Reconstruction in the CMS tracker}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2006-041",
+      month         = "Dec",
+      year          = "2006",
+}
+
 @article{1748-0221-6-11-P11002,
       collaboration  = {CMS},
       title          = "{Determination of Jet Energy Calibration and Transverse Momentum Resolution in CMS}",
