--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3559,6 +3559,32 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       year          = "2006",
 }
 
+@article{Chatrchyan:2012jua,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Identification of b-quark jets with the CMS experiment}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JINST",
+      volume         = "8",
+      pages          = "P04013",
+      doi            = "10.1088/1748-0221/8/04/P04013",
+      year           = "2013",
+      eprint         = "1211.4462",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-BTV-12-001, CERN-PH-EP-2012-262",
+      SLACcitation   = "%%CITATION = ARXIV:1211.4462;%%",
+}
+
+@techreport{CMS-PAS-BTV-13-001,
+      title         = "{Performance of b tagging at sqrt(s)=8 TeV in multijet,
+                       ttbar and boosted topology events}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-BTV-13-001",
+      year          = "2013",
+}
+
 @article{1748-0221-6-11-P11002,
       collaboration  = {CMS},
       title          = "{Determination of Jet Energy Calibration and Transverse Momentum Resolution in CMS}",
